--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ShoppingListApp": {
+    "RecipeBookApp": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -65,10 +65,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ShoppingListApp:build:production"
+              "browserTarget": "RecipeBookApp:build:production"
             },
             "development": {
-              "browserTarget": "ShoppingListApp:build:development"
+              "browserTarget": "RecipeBookApp:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -76,7 +76,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ShoppingListApp:build"
+            "browserTarget": "RecipeBookApp:build"
           }
         },
         "test": {
@@ -99,5 +99,5 @@
       }
     }
   },
-  "defaultProject": "ShoppingListApp"
+  "defaultProject": "RecipeBookApp"
 }
